ver 1.0 без шифрования

--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Migrations\202004022011531_FirstMigration.designer.cs">
       <DependentUpon>202004022011531_FirstMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004071756077_SecondMigration.cs" />
+    <Compile Include="Migrations\202004071756077_SecondMigration.designer.cs">
+      <DependentUpon>202004071756077_SecondMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PasswordGroup.cs" />
     <Compile Include="PIDbContext.cs" />
@@ -69,6 +73,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202004022011531_FirstMigration.resx">
       <DependentUpon>202004022011531_FirstMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004071756077_SecondMigration.resx">
+      <DependentUpon>202004071756077_SecondMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
