--- a/Controllers/Controllers.csproj
+++ b/Controllers/Controllers.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountController.cs" />
+    <Compile Include="GroupController.cs" />
     <Compile Include="PasswordGeneratorController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SendEmailController.cs" />
