--- a/View/packages.config
+++ b/View/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="IKVM" version="8.1.5717.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="Unity" version="5.11.5" targetFramework="net472" />
+  <package id="Xamarin.Forms" version="4.5.0.530" targetFramework="net472" />
 </packages>
