--- a/ViewAuthorization/ViewAuthorization.csproj
+++ b/ViewAuthorization/ViewAuthorization.csproj
@@ -77,12 +77,6 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormPasswordGenerator.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormPasswordGenerator.Designer.cs">
-      <DependentUpon>FormPasswordGenerator.cs</DependentUpon>
-    </Compile>
     <Compile Include="FormRegistration.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,13 +89,6 @@
     <Compile Include="FormVerification.Designer.cs">
       <DependentUpon>FormVerification.cs</DependentUpon>
     </Compile>
-    <Compile Include="MessegeBoxOk.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MessegeBoxOk.Designer.cs">
-      <DependentUpon>MessegeBoxOk.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MyMessageBox.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormFogotPassword.resx">
@@ -110,17 +97,11 @@
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormPasswordGenerator.resx">
-      <DependentUpon>FormPasswordGenerator.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FormRegistration.resx">
       <DependentUpon>FormRegistration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormVerification.resx">
       <DependentUpon>FormVerification.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MessegeBoxOk.resx">
-      <DependentUpon>MessegeBoxOk.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -177,7 +158,7 @@
       <Name>Models</Name>
     </ProjectReference>
     <ProjectReference Include="..\View\View.csproj">
-      <Project>{26D5A8BF-26B6-4DE4-8D82-05B58CE4FB8F}</Project>
+      <Project>{26d5a8bf-26b6-4de4-8d82-05b58ce4fb8f}</Project>
       <Name>View</Name>
     </ProjectReference>
   </ItemGroup>
@@ -222,6 +203,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="images\editGreen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\eye.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\noeye.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
